SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Adjusted_by_Contract__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_by_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract that holds the contract&apos;s adjustment</description>
    <label>Adjusted by Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Source Contracts</relationshipLabel>
    <relationshipName>Source_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>