SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Adjustment_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_of_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contract of which contract is an adjustment</description>
    <label>Adjustment of Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Adjustments</relationshipLabel>
    <relationshipName>Contract_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>