SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>Type of Contract Adjustment the Contract performed</description>
    <inlineHelpText></inlineHelpText>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>