SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>Latest end date of Contract Entitlements</description>
    <label>Contract End Date</label>
    <summarizedField>Contract_Entitlement__c.End_Date__c</summarizedField>
    <summaryForeignKey>Contract_Entitlement__c.Contract__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>