SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>Earliest start date of Contract Entitlements</description>
    <label>Contract Start Date</label>
    <summarizedField>Contract_Entitlement__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Contract_Entitlement__c.Contract__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>