SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>
        IF (
            ISPICKVAL(Adjusted_by_Contract__r.Adjustment_Type__c, &apos;Amendment&apos;),
            &apos;Amended&apos;,
            IF (
                ISPICKVAL(Adjusted_by_Contract__r.Adjustment_Type__c, &apos;Replacement&apos;),
                &apos;Replaced&apos;,
                IF (
                    ISPICKVAL(Adjusted_by_Contract__r.Adjustment_Type__c, &apos;Renewal&apos;),
                    IF (
                        Contract_End_Date__c &gt;= TODAY(),
                        &apos;Awaiting Renewal&apos;,
                        &apos;Renewed&apos;
                    ),
                    IF (
                        IsVoid__c = TRUE,
                        &apos;Void&apos;,
                            IF (
                                AND(
                                    Contract_Start_Date__c &lt;= TODAY(),
                                    Contract_End_Date__c &gt;= TODAY()
                                ),
                                &apos;Active&apos;,
                            IF (
                                Contract_Start_Date__c &gt; TODAY(),
                                &apos;Upcoming&apos;,
                                IF (
                                    Contract_End_Date__c &lt; TODAY(),
                                    &apos;Past&apos;,
                                    &apos;Invalid&apos;
                                )
                            )
                        )
                    )
                )
            )
        )
</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>