SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Contract_Total__c.field-meta.xml
<CustomField>
    <fullName>Contract_Total__c</fullName>
    <description>Total contract currency value</description>
    <label>Contract Total</label>
    <summarizedField>Contract_Entitlement__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Contract_Entitlement__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>