SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/CPQ_Playbook__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Playbook used to configure contract</description>
    <label>CPQ Playbook</label>
    <referenceTo>CPQ_Playbook__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>