SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/IsReplaced__c.field-meta.xml
<CustomField>
    <fullName>IsReplaced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if contract has been replaced</description>
    <label>Is Replaced</label>
    <type>Checkbox</type>
</CustomField>