SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/IsVoid__c.field-meta.xml
<CustomField>
    <fullName>IsVoid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if contract has been voided</description>
    <label>Is Void</label>
    <type>Checkbox</type>
</CustomField>