SFDC_LD_Packages/CPQ/main/default/objects/Contract/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Synced Quote that generated the contract</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>